--- a/src/components/customTable/customTable.less
+++ b/src/components/customTable/customTable.less
@@ -1,17 +1,44 @@
-.statisticBefore {
-    font-size: 14px;
-    color: rgb(255, 255, 255);
-    position: absolute;
-    width: 100%;
-    height: 22px;
-    top: 0;
+.statisticUpBefore {
+  font-size: 14px;
+  color: rgb(255, 255, 255);
+  position: absolute;
+  width: 100%;
+  height: 22px;
+  top: 0;
 }
 
-.statisticBefore::before {
-    content: '';
-    background-color: rgb(63, 134, 0);
-    width: `${var(--width)}%`;
-    height: 100%;
-    position: absolute;
-    right: 0;
+.statisticUpBefore::before {
+  content: '';
+  background-color: rgb(63, 134, 0);
+  width: var(--width);
+  height: 100%;
+  position: absolute;
+  left: 0;
 }
+
+.statisticDownBefore {
+  font-size: 14px;
+  color: rgb(255, 255, 255);
+  position: absolute;
+  width: 100%;
+  height: 22px;
+  top: 0;
+}
+
+.statisticDownBefore::before {
+  content: '';
+  background-color: rgb(207, 19, 34);
+  width: var(--width);
+  height: 100%;
+  position: absolute;
+  right: 0;
+}
+
+.ant-statistic-content-value {
+  position: relative;
+}
+
+.ant-statistic-content-suffix {
+  position: relative;
+}
+
